Add delimiter column to Dialog

--- a/src/main/resources/vn/com/watanabe/etl/step/plugin/xml_transform/messages/messages_en_US.properties
+++ b/src/main/resources/vn/com/watanabe/etl/step/plugin/xml_transform/messages/messages_en_US.properties
@@ -3,6 +3,7 @@ XMLTransform.FieldName.Label=Output field name
 XMLTransform.CheckResult.ReceivingRows.OK=Step is receiving input from other steps.
 XMLTransform.CheckResult.ReceivingRows.ERROR=No input received from other steps!
 
+
 XMLTransform.Name=XMLTransform Step
 XMLTransform.TooltipDesc=XMLTransform Step Description
 XMLTransform.DocumentationURL=https://help.pentaho.com/Documentation/6.1/0R0/0V0
@@ -79,6 +80,7 @@ XMLTransform.Log.LoopFileOccurences=We found [{0}] occurrences for file [{1}]
 XMLTransform.Log.ErrorApplyXPath=Error while applying xPath. Error\:{0}
 XMLTransform.Encoding.Label=Encoding
 XMLTransform.FieldsTable.Repeat.Column=Repeat
+XMLTransform.FieldsTable.Repeat.Delimiter=Delimiter
 XMLTransform.LoopXPath.Tooltip=Node of the tree, on which the loop is based
 XMLTransform.FieldsTable.Length.Column=Length
 XMLTransform.useToken.Tooltip=Check this option if you want to use Token inside path field.\nThe syntax is \: @_Fieldname-\nPDI will search for Fieldname value and replace it.\nFieldname must be defined before the current field
